--- a/scss/layout/_gototop.scss
+++ b/scss/layout/_gototop.scss
@@ -3,16 +3,15 @@
   @include pxRem(height, 56);
   @include pxRem(right, 20);
   @include pxRem(top, 750);
+  top: calc(100vh - #{convertPxToRem(80px)});
   position: fixed;
   border-radius: 50%;
   background-color: inherit;
   border: 2px solid map-get($colors, primary);
-  // position: relative;
   float: right;
   outline: none;
   transition: .4s ease-in-out;
   cursor: pointer;
-  z-index: 99999;
   &:hover {
     background-color: map-get($colors, primary);
     i {
