--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -76,10 +76,18 @@
     border-left: 1px solid map-get($colors, border-gray1);
   }
 }
-
 .collapse {
   display: none;
 }
 .collapse.show {
   display: block;
+}
+@include respond-below(large) {
+  .menu-list {
+    width: 100%;
+    border-right: 1px solid map-get($colors, border-gray-light);
+  }
+  .outer-box {
+    display: none;
+  }
 }
