--- a/scss/modules/_section.scss
+++ b/scss/modules/_section.scss
@@ -4,12 +4,13 @@
   font-weight: 400;
   text-align: center;
   &:after {
-    @include pxRem(width, 150);
-    top: 100%;
+    @include pxRem(width, 130);
+    @include pxRem(height, 20);
     content: "";
+    top: 100%;
     display: block;
-    border: 2px solid map-get($colors, primary);
-    margin: 0 auto;  
+    margin: 0 auto;
+    background-image: url("/assets/images/bor-title.png");
   }
 }
 .sub-title {
@@ -17,4 +18,11 @@
   @include pxRem(margin-top, 10);
   color: map-get($colors, txt-gray3);
   font-weight: 300;
+}
+
+@include respond-below(large) {
+  .sub-title {
+    display: inline;
+    justify-content: center;
+  }
 }
