--- a/scss/modules/_buttons.scss
+++ b/scss/modules/_buttons.scss
@@ -5,6 +5,7 @@
   box-shadow: none;
   -webkit-appearance: none;
   transition: .4s ease-in-out;
+  cursor: pointer;
   &:active,
   &:focus {
     outline: none;
