--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -86,3 +86,31 @@
     }
   }
 }
+@include respond-below(large) {
+  .page-header {
+    .middle-list {
+      .middle-item {
+        @include pxRem(margin-bottom, 20);
+        width: 100%;
+        flex-direction: column;
+        &:first-child {
+          border-right: none;
+        }
+        img {
+          margin: 0 auto;
+        }
+        .middle-content {
+          @include pxRem(margin-top, 10);
+          text-align: center;
+        }
+      }
+    }
+    .header-middle {
+      .header-wrapper {
+        border-left: none;
+        border-right: none;
+        padding: 0;
+      }
+    }
+  }
+}
