--- a/styles.css
+++ b/styles.css
@@ -457,7 +457,8 @@ h6 {
   outline: none;
   box-shadow: none;
   -webkit-appearance: none;
-  transition: .4s ease-in-out; }
+  transition: .4s ease-in-out;
+  cursor: pointer; }
   .btn:active, .btn:focus {
     outline: none;
     box-shadow: none; }
@@ -548,8 +549,6 @@ h6 {
   position: relative;
   transition: height 3s;
   z-index: 1000; }
-  .dropdown .dropdown-content {
-    display: none; }
   .dropdown > a:after {
     font-size: 14px;
     font-size: 0.875rem;
@@ -561,15 +560,17 @@ h6 {
     color: #333; }
   .dropdown:hover > a:after {
     color: #fa9928; }
-  .dropdown:hover .dropdown-content {
+  .dropdown .dropdown-content {
     padding: 10px 0px;
     padding: 0.625rem 0rem;
     border-bottom: 2px solid #fa9928;
     top: 103%;
     left: 0%;
     position: absolute;
-    display: block;
-    background-color: #131d33; }
+    background-color: #131d33;
+    opacity: 0; }
+  .dropdown:hover .dropdown-content {
+    opacity: 1; }
     .dropdown:hover .dropdown-content li {
       padding: 0px 20px;
       padding: 0rem 1.25rem;
@@ -603,12 +604,16 @@ h6 {
     position: relative;
     transition: width 4s; }
     .dropdown .drop-sub .dropdown-content {
+      width: 170px;
+      width: 10.625rem;
       position: absolute;
-      top: 0 !important;
-      left: 100% !important;
-      display: none; }
+      top: 0;
+      left: 100%;
+      opacity: 0;
+      transition: width 1s; }
     .dropdown .drop-sub:hover .dropdown-content {
-      display: block; }
+      width: 100%;
+      opacity: 1; }
     .dropdown .drop-sub a::after {
       display: none; }
 
@@ -892,6 +897,25 @@ h6 {
       .page-header .middle-list .middle-item:first-child {
         border-right: 1px solid #f0f0f0; } }
 
+@media (max-width: 1023px) {
+  .page-header .middle-list .middle-item {
+    margin-bottom: 20px;
+    margin-bottom: 1.25rem;
+    width: 100%;
+    flex-direction: column; }
+    .page-header .middle-list .middle-item:first-child {
+      border-right: none; }
+    .page-header .middle-list .middle-item img {
+      margin: 0 auto; }
+    .page-header .middle-list .middle-item .middle-content {
+      margin-top: 10px;
+      margin-top: 0.625rem;
+      text-align: center; }
+  .page-header .header-middle .header-wrapper {
+    border-left: none;
+    border-right: none;
+    padding: 0; } }
+
 .section-widgets {
   border: 1px solid rgba(255, 255, 255, 0.1); }
   .section-widgets .col-4 {
@@ -1035,6 +1059,25 @@ h6 {
       margin-bottom: 15px;
       margin-bottom: 0.9375rem; } }
 
+@media (max-width: 767px) {
+  .section-widgets {
+    border-bottom: none; }
+  .contacts {
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+    margin: 0; }
+    .contacts .contact-item {
+      flex-direction: column;
+      border-right: none; }
+      .contacts .contact-item img {
+        width: 50px;
+        width: 3.125rem;
+        margin: 0 auto; }
+      .contacts .contact-item .contact-content {
+        text-align: center; }
+  .widget:nth-child(2), .widget:nth-child(3) {
+    padding: 20px;
+    padding: 1.25rem; } }
+
 .menu-list .menu-item {
   padding: 20px 25px;
   padding: 1.25rem 1.5625rem;
@@ -1116,12 +1159,35 @@ h6 {
 .collapse.show {
   display: block; }
 
+.nav-sp {
+  display: none; }
+
 @media (max-width: 1023px) {
   .menu-list {
     width: 100%;
     border-right: 1px solid #f0f0f0; }
   .outer-box {
     display: none; } }
+
+@media (max-width: 767px) {
+  .nav-pc .menu-list, .nav-pc .outer-box {
+    display: none; }
+  .nav-sp {
+    padding: 20px 15px;
+    padding: 1.25rem 0.9375rem;
+    display: flex;
+    width: 100%; }
+  .page-header .header-navbar {
+    display: flex;
+    flex-direction: column-reverse; }
+    .page-header .header-navbar .nav-pc {
+      justify-content: flex-start;
+      width: 100%; }
+    .page-header .header-navbar .btn-nav {
+      font-size: 22px;
+      font-size: 1.375rem;
+      padding: 10px 10px;
+      padding: 0.625rem 0.625rem; } }
 
 .section-slideshow {
   position: relative;
@@ -1142,17 +1208,17 @@ h6 {
       position: relative;
       z-index: 100; }
       .section-slideshow .slide-list .slide-item:first-child .slide-content {
-        top: 15%;
         left: 50%; }
-      .section-slideshow .slide-list .slide-item img {
-        height: 402px;
-        height: 25.125rem;
+      .section-slideshow .slide-list .slide-item .slide-img {
+        height: 560px;
+        height: 35rem;
         width: 100%; }
       .section-slideshow .slide-list .slide-item .slide-content {
         position: absolute;
         width: 46%;
-        top: 10%;
-        left: 10%; }
+        top: 50%;
+        left: 10%;
+        transform: translateY(-50%); }
 
 .slide-content .slide-title {
   font-size: 48px;
@@ -1189,6 +1255,9 @@ h6 {
     transform: translateX(0%); } }
 
 @media (max-width: 1023px) {
+  .section-slideshow .slide-list .slide-item .slide-img {
+    height: 402px;
+    height: 25.125rem; }
   .section-slideshow .btn-action {
     display: block; }
   .slide-content .slide-title {
@@ -1208,6 +1277,13 @@ h6 {
     font-size: 0.625rem; }
   .wrapper-sub-title {
     text-align: center; } }
+
+@media (max-width: 767px) {
+  .section-slideshow .slide-list .slide-item .slide-img {
+    height: 246px;
+    height: 15.375rem; }
+  .section-slideshow .slide-list .slide-item .slide-content .btn-primary, .section-slideshow .slide-list .slide-item .slide-content .btn-second {
+    display: none; } }
 
 .projects .project {
   margin-bottom: 30px;
@@ -1266,7 +1342,8 @@ h6 {
   float: right;
   outline: none;
   transition: .4s ease-in-out;
-  cursor: pointer; }
+  cursor: pointer;
+  z-index: 99999; }
   .btn-gotop:hover {
     background-color: #fa9928; }
     .btn-gotop:hover i {
@@ -2228,9 +2305,10 @@ h6 {
   .section-services .services {
     margin-top: 20px;
     margin-top: 1.25rem; }
+    .section-services .services .service {
+      transition-delay: 2s; }
     .section-services .services .overlay-box {
-      position: relative;
-      transition: all 700ms ease; }
+      position: relative; }
       .section-services .services .overlay-box .overlay-inner {
         position: relative;
         overflow: hidden; }
@@ -2258,22 +2336,25 @@ h6 {
         height: 300px;
         height: 18.75rem;
         width: 100%; }
-    .section-services .services .service:hover .overlay-inner .bg-icon {
-      display: none; }
-    .section-services .services .service:hover .wrapper-txt {
+    .section-services .services .wrapper-txt {
       padding: 0px 20px;
       padding: 0rem 1.25rem;
       font-size: 16px;
       font-size: 1rem;
       position: absolute;
-      display: block;
       background: rgba(19, 29, 51, 0.9);
       z-index: 1500;
       top: 0;
       left: 0;
       bottom: 0;
       text-align: center;
-      width: 100%; }
+      width: 100%;
+      opacity: 0;
+      transition: all .7s ease; }
+    .section-services .services .service:hover .overlay-inner .bg-icon {
+      display: none; }
+    .section-services .services .service:hover .wrapper-txt {
+      opacity: 1; }
       .section-services .services .service:hover .wrapper-txt .text {
         color: #fff;
         position: absolute;
@@ -2630,6 +2711,14 @@ h6 {
           color: #848484;
           font-weight: 200; }
 
+@media (max-width: 1279px) {
+  .section-subscribe {
+    padding: 45px 0px;
+    padding: 2.8125rem 0rem; }
+    .section-subscribe .form-subcribe {
+      display: flex;
+      flex-wrap: wrap; } }
+
 @media (max-width: 1023px) {
   .section-services .services .service {
     margin-bottom: 30px;
@@ -2666,15 +2755,27 @@ h6 {
       line-height: 1.875rem; }
   .section-business {
     text-align: center; }
-  .section-subscribe {
-    padding: 45px 0px;
-    padding: 2.8125rem 0rem; }
-    .section-subscribe .wrapper-subscribe {
-      flex-direction: column;
-      align-items: flex-start; }
-    .section-subscribe .form-subcribe {
-      margin-top: 30px;
-      margin-top: 1.875rem; } }
+  .section-subscribe .wrapper-subscribe {
+    flex-direction: column;
+    align-items: flex-start; }
+  .section-subscribe .form-subcribe {
+    margin-top: 30px;
+    margin-top: 1.875rem; } }
+
+@media (max-width: 767px) {
+  .themes-item:first-child {
+    width: 100%; }
+  .section-business .sec-title {
+    font-size: 24px;
+    font-size: 1.5rem; }
+  .section-business .sub-title {
+    font-size: 14px;
+    font-size: 0.875rem; }
+  .section-subscribe .form-subcribe {
+    justify-content: space-between; }
+    .section-subscribe .form-subcribe .form-control {
+      width: 315px;
+      width: 19.6875rem; } }
 
 .page-gui .menu-list {
   border-top: 1px solid #f0f0f0;
