--- a/scss/layout/_slideshow.scss
+++ b/scss/layout/_slideshow.scss
@@ -62,19 +62,19 @@
 
 .fade {
   -webkit-animation-name: fade;
-  -webkit-animation-duration: 3s;
+  -webkit-animation-duration: 1.5s;
   animation-name: fade;
-  animation-duration: 3s;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
 }
 
 @keyframes fade {
-  from {
-   transform: translateX(50%);
- }
-
- to {
-   transform: translateX(0%);
- }
+  from {opacity: .4} 
+  to {opacity: 1}
 }
 
 @include respond-below(large) {
@@ -117,6 +117,12 @@
           @include pxRem(height, 246);
         }
         .slide-content {
+          .slide-title {
+            @include pxRem(font-size, 20);
+          }
+          .slide-description {
+            @include pxRem(font-size, 18);
+          }
           .btn-primary, .btn-second {
             display: none;
           }
