--- a/scss/modules/_dropdown.scss
+++ b/scss/modules/_dropdown.scss
@@ -79,3 +79,23 @@
     }
   }
 }
+
+@include respond-below(medium) {
+  .dropdown {
+    & > a {
+      display: block;
+      &::after {
+        @include pxRem(right, 15);
+        @include pxRem(padding, 2 15);
+        position: absolute;
+        color: map-get($colors, white);
+        top: 50%;
+        transform: translateY(-50%);
+        border: 1px solid map-get($colors, white);
+      }
+    }
+    .dropdown-content {
+      display: none;
+    }
+  }
+}
